--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(#f2f2f2, #cbcbcb);
+  background: linear-gradient(#f2f2f2, #dbdbdb);
   background-attachment: fixed;
 }
 
